objects/parent__c.object
<CustomObject>
    <label>parent</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>parent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>parent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Rollup__c</fullName>
        <label>Rollup value</label>
        <summarizedField>Child__c.Num__c</summarizedField>
        <summaryForeignKey>Child__c.parent__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>parent</relationshipLabel>
        <relationshipName>parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>final_result__c</fullName>
        <formula>Rollup__c * Product_value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>final result</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rollupCustom__c</fullName>
        <label>rollupCustom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_value__c</fullName>
        <label>Product value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>negative_value__c</fullName>
        <label>negative value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>triggerFinalresult__c</fullName>
        <label>triggerFinalresult</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>trigger_total_from_child__c</fullName>
        <label>trigger total from child</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_hours_child_working__c</fullName>
        <label>total hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>